# claude-guardrails

./: README.md  pyproject.toml
src/claude_guardrails/: __init__.py  cli.py  paths.py  settings.py  types.py
src/claude_guardrails/commands/: __init__.py  install.py  progressive.py  reminders.py  url_discipline.py
src/claude_guardrails/hooks/: __init__.py  periodic-reminders.sh  structured-file-nudge.py  webfetch-url-discipline.py
src/claude_guardrails/templates/: __init__.py  reminders.json.example  structured-files.md
