[project]
name = "claude-guardrails"
version = "0.1.0"
description = "Guardrails and hooks for Claude Code: periodic reminders, progressive disclosure, URL discipline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Marc" }
]
keywords = ["claude", "claude-code", "hooks", "guardrails", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
claude-guardrails = "claude_guardrails.cli:app"

[project.urls]
Homepage = "https://github.com/m-gris/claude-guardrails"
Repository = "https://github.com/m-gris/claude-guardrails"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_guardrails"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
